example-apps/nginx-deployment/nginx.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fs
  #namespace: qb-pro
spec:
  rules:
  - host: nginx.service
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: http
